Updated reports for Faroese with updated lang id

--- a/reports/mono-2.0/HPLT-v2-fao_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-fao_Latn.yaml
@@ -1,3 +1,4 @@
+corpus: fao_Latn.jsonl.tsv
 docs_collections: '[["cc22", 76388], ["cc18", 48685], ["cc21", 27988], ["wide15",
   19948], ["wide17", 11304], ["wide16", 9286], ["wide12", 7344], ["wide11", 6728],
   ["cc17", 6315], ["wide6", 4511], ["cc19", 3837], ["cc20", 3230], ["wide5", 3147],
@@ -139,36 +140,48 @@ docs_wds: '[[5, 1313], [5.1, 1267], [5.2, 1478], [5.3, 1445], [5.4, 1826], [5.5,
   [8.2, 12712], [8.3, 8248], [8.4, 5538], [8.5, 4214], [8.6, 3654], [8.7, 3271], [8.8,
   3043], [8.9, 2815], [9, 2904], [9.1, 2208], [9.2, 1630], [9.3, 1388], [9.4, 1190],
   [9.5, 1083], [9.6, 934], [9.7, 680], [9.8, 372], [9.9, 158], [10, 62]]'
-corpus: fao_Latn.jsonl.tsv
 hardrules_tags: '{"not_too_long": 0, "not_too_short": 258865, "no_urls": 102245, "no_bad_encoding":
   171, "pii": 25996}'
 sentence_pairs: 4526061
 src_bytes: 592.33 MB
 src_chars: 577511299
-src_langs: '[["is", 2632020], ["nb", 540034], ["da", 302035], ["en", 217720], ["nn",
-  107637], ["de", 103887], ["sv", 60727], ["et", 59600], ["cs", 50868], ["it", 45664],
-  ["fr", 45078], ["hu", 45044], ["pt", 40626], ["es", 39526], ["nl", 27530], ["sk",
-  17947], ["pl", 16671], ["lt", 16519], ["hr", 14666], ["fi", 14664], ["ca", 10739],
-  ["id", 9207], ["vi", 9029], ["gl", 8369], ["tr", 7979], ["sl", 7380], ["ceb", 7008],
-  ["war", 6912], ["ru", 4950], ["eo", 4946], ["ga", 4703], ["ro", 4532], ["la", 3799],
-  ["tl", 3553], ["sr", 3389], ["ms", 2529], ["zh", 2513], ["sq", 2384], ["jv", 2193],
-  ["ja", 1788], ["ko", 1485], ["uk", 1447], ["oc", 1229], ["ur", 1196], ["fy", 932],
-  ["eu", 854], ["bs", 835], ["ilo", 800], ["ast", 729], ["gn", 672], ["br", 626],
-  ["el", 613], ["lv", 575], ["nds", 450], ["mt", 424], ["als", 409], ["pms", 405],
-  ["fa", 401], ["az", 343], ["ku", 293], ["cy", 286], ["ka", 267], ["bg", 264], ["uz",
-  262], ["th", 244], ["af", 242], ["sw", 193], ["kn", 182], ["ml", 168], ["gom", 156],
-  ["ar", 144], ["kw", 139], ["su", 132], ["hy", 125], ["ht", 114], ["io", 107], ["my",
-  95], ["be", 95], ["bcl", 95], ["rm", 91], ["pam", 84], ["qu", 73], ["new", 69],
-  ["tt", 64], ["am", 59], ["eml", 58], ["vo", 55], ["mr", 52], ["si", 51], ["gd",
-  48], ["tk", 47], ["bar", 46], ["lmo", 44], ["vep", 41], ["ta", 39], ["mwl", 38],
-  ["lb", 35], ["kk", 33], ["jbo", 33], ["kv", 32], ["te", 31], ["ia", 27], ["bn",
-  27], ["so", 26], ["mk", 24], ["mg", 23], ["os", 22], ["min", 22], ["he", 22], ["pa",
-  21], ["hi", 21], ["yue", 20], ["cbk", 20], ["li", 18], ["dv", 18], ["sco", 16],
-  ["vec", 15], ["ce", 15], ["mn", 14], ["wuu", 13], ["nap", 13], ["lo", 13], ["ie",
-  13], ["diq", 11], ["ckb", 10], ["yo", 9], ["ps", 9], ["gu", 9], ["an", 8], ["ne",
-  7], ["km", 7], ["bo", 7], ["tg", 6], ["frr", 6], ["nah", 4], ["gv", 4], ["ba", 4],
-  ["dsb", 3], ["yi", 2], ["xal", 2], ["sc", 2], ["sa", 2], ["ky", 2], ["xmf", 1],
-  ["vls", 1], ["scn", 1], ["sah", 1], ["mrj", 1], ["hsb", 1], ["azb", 1], ["as", 1]]'
+src_langs: '[["fo", 3233796], ["en", 217720], ["nn", 107637], ["de", 103887], ["da",
+  103354], ["is", 93461], ["sv", 60727], ["et", 59600], ["cs", 50868], ["it", 45664],
+  ["fr", 45078], ["hu", 45044], ["nb", 43478], ["pt", 40626], ["es", 39526], ["nl",
+  27530], ["sk", 17947], ["pl", 16671], ["lt", 16519], ["hr", 14666], ["fi", 14664],
+  ["ca", 10739], ["id", 9207], ["vi", 9029], ["gl", 8369], ["tr", 7979], ["sl", 7380],
+  ["ceb", 7008], ["war", 6912], ["ru", 4950], ["eo", 4946], ["ga", 4703], ["ro", 4532],
+  ["la", 3799], ["tl", 3553], ["sr", 3389], ["ms", 2529], ["zh", 2513], ["sq", 2384],
+  ["jv", 2193], ["ja", 1788], ["ko", 1485], ["uk", 1447], ["oc", 1229], ["ur", 1196],
+  ["fy", 932], ["eu", 854], ["bs", 835], ["ilo", 800], ["ast", 729], ["gn", 672],
+  ["br", 626], ["el", 613], ["lv", 575], ["nds", 450], ["mt", 424], ["als", 409],
+  ["pms", 405], ["fa", 401], ["az", 343], ["ku", 293], ["cy", 286], ["ka", 267], ["bg",
+  264], ["uz", 262], ["th", 244], ["af", 242], ["sw", 193], ["kn", 182], ["ml", 168],
+  ["gom", 156], ["ar", 144], ["kw", 139], ["su", 132], ["hy", 125], ["ht", 114], ["io",
+  107], ["my", 95], ["be", 95], ["bcl", 95], ["rm", 91], ["pam", 84], ["qu", 73],
+  ["new", 69], ["tt", 64], ["am", 59], ["eml", 58], ["vo", 55], ["mr", 52], ["si",
+  51], ["gd", 48], ["tk", 47], ["bar", 46], ["lmo", 44], ["vep", 41], ["ta", 39],
+  ["mwl", 38], ["lb", 35], ["kk", 33], ["jbo", 33], ["kv", 32], ["te", 31], ["ia",
+  27], ["bn", 27], ["so", 26], ["mk", 24], ["mg", 23], ["os", 22], ["min", 22], ["he",
+  22], ["pa", 21], ["hi", 21], ["yue", 20], ["cbk", 20], ["li", 18], ["dv", 18], ["sco",
+  16], ["vec", 15], ["ce", 15], ["mn", 14], ["wuu", 13], ["nap", 13], ["lo", 13],
+  ["ie", 13], ["diq", 11], ["ckb", 10], ["yo", 9], ["ps", 9], ["gu", 9], ["an", 8],
+  ["ne", 7], ["km", 7], ["bo", 7], ["tg", 6], ["frr", 6], ["nah", 4], ["gv", 4], ["ba",
+  4], ["dsb", 3], ["yi", 2], ["xal", 2], ["sc", 2], ["sa", 2], ["ky", 2], ["xmf",
+  1], ["vls", 1], ["scn", 1], ["sah", 1], ["mrj", 1], ["hsb", 1], ["azb", 1], ["as",
+  1]]'
+src_ngrams: '{"1": [[["og"], 3387444], [["\u00ed"], 3249989], [["at"], 2768467], [["er"],
+  1627231], [["\u00e1"], 1349045]], "2": [[["t\u00e1 i\u00f0"], 102655], [["\u00ed
+  f\u00f8royum"], 90913], [["er ein"], 79544], [["at f\u00e1a"], 76951], [["\u00ed
+  dag"], 72703]], "3": [[["at ta\u00f0 er"], 17509], [["og ta\u00f0 er"], 16845],
+  [["ber til at"], 16276], [["av t\u00ed at"], 10303], [["\u00ed minsta lagi"], 10041]],
+  "4": [[["skriva so til vp"], 5324], [["var\u00f0 fyrstu fer\u00f0 l\u00f8gd"], 3854],
+  [["greinin var\u00f0 fyrstu fer\u00f0"], 3853], [["fyrstu fer\u00f0 l\u00f8gd \u00fat"],
+  3853], [["posted by listin at"], 3789]], "5": [[["var\u00f0 fyrstu fer\u00f0 l\u00f8gd
+  \u00fat"], 3853], [["greinin var\u00f0 fyrstu fer\u00f0 l\u00f8gd"], 3853], [["partur
+  av b\u00f3kaheild til undirv\u00edsingina"], 3302], [["av b\u00f3kaheild til undirv\u00edsingina
+  \u00ed"], 3302], [["b\u00f3kaheild til undirv\u00edsingina \u00ed st\u00f8ddfr\u00f8\u00f0i"],
+  2820]]}'
 src_sent_tokens: '[[0, 181], [1, 238880], [2, 210818], [3, 201762], [4, 250793], [5,
   246087], [6, 234376], [7, 234280], [8, 173874], [9, 147534], [10, 123564], [11,
   106374], [12, 101910], [13, 91628], [14, 83230], [15, 76361], [16, 71309], [17,
@@ -499,15 +512,3 @@ unique_sents: 2174019
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-src_ngrams: '{"1": [[["og"], 3387444], [["\u00ed"], 3249989], [["at"], 2768467], [["er"],
-  1627231], [["\u00e1"], 1349045]], "2": [[["t\u00e1 i\u00f0"], 102655], [["\u00ed
-  f\u00f8royum"], 90913], [["er ein"], 79544], [["at f\u00e1a"], 76951], [["\u00ed
-  dag"], 72703]], "3": [[["at ta\u00f0 er"], 17509], [["og ta\u00f0 er"], 16845],
-  [["ber til at"], 16276], [["av t\u00ed at"], 10303], [["\u00ed minsta lagi"], 10041]],
-  "4": [[["skriva so til vp"], 5324], [["var\u00f0 fyrstu fer\u00f0 l\u00f8gd"], 3854],
-  [["greinin var\u00f0 fyrstu fer\u00f0"], 3853], [["fyrstu fer\u00f0 l\u00f8gd \u00fat"],
-  3853], [["posted by listin at"], 3789]], "5": [[["var\u00f0 fyrstu fer\u00f0 l\u00f8gd
-  \u00fat"], 3853], [["greinin var\u00f0 fyrstu fer\u00f0 l\u00f8gd"], 3853], [["partur
-  av b\u00f3kaheild til undirv\u00edsingina"], 3302], [["av b\u00f3kaheild til undirv\u00edsingina
-  \u00ed"], 3302], [["b\u00f3kaheild til undirv\u00edsingina \u00ed st\u00f8ddfr\u00f8\u00f0i"],
-  2820]]}'
