Updated reports for Haitian Creole with updated lang id

--- a/reports/mono-2.0/HPLT-v2-hat_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-hat_Latn.yaml
@@ -1,3 +1,4 @@
+corpus: hat_Latn.jsonl.tsv
 docs_collections: '[["cc22", 54913], ["cc18", 33696], ["wide16", 19571], ["wide12",
   18174], ["wide11", 17434], ["cc21", 17417], ["wide17", 9514], ["cc17", 9068], ["wide15",
   6768], ["wide5", 5698], ["wide10", 5249], ["wide6", 4904], ["cc14", 2369], ["survey3",
@@ -145,17 +146,16 @@ docs_wds: '[[5, 1726], [5.1, 1790], [5.2, 1924], [5.3, 1934], [5.4, 2045], [5.5,
   [8.2, 9178], [8.3, 6685], [8.4, 5228], [8.5, 4099], [8.6, 3920], [8.7, 3619], [8.8,
   3455], [8.9, 3965], [9, 4517], [9.1, 4865], [9.2, 2168], [9.3, 1502], [9.4, 1291],
   [9.5, 1106], [9.6, 899], [9.7, 636], [9.8, 421], [9.9, 124], [10, 37]]'
-corpus: hat_Latn.jsonl.tsv
 hardrules_tags: '{"not_too_long": 0, "not_too_short": 483700, "no_urls": 72439, "no_bad_encoding":
   531, "pii": 8836}'
 sentence_pairs: 4635460
 src_bytes: 623.02 MB
 src_chars: 634488750
-src_langs: '[["ht", 1094266], ["fr", 625636], ["en", 547711], ["tl", 479162], ["it",
-  166745], ["pms", 129322], ["jv", 122871], ["oc", 92808], ["tr", 84877], ["es", 67838],
-  ["hr", 65110], ["de", 64639], ["ms", 62642], ["ku", 56552], ["wa", 48502], ["pl",
-  47734], ["eo", 45607], ["br", 44649], ["eml", 42818], ["ca", 42509], ["ro", 39878],
-  ["vi", 39717], ["id", 37327], ["sr", 34309], ["nl", 34012], ["pt", 32800], ["la",
+src_langs: '[["ht", 1542347], ["fr", 625636], ["en", 547711], ["it", 166745], ["pms",
+  129322], ["jv", 122871], ["oc", 92808], ["tr", 84877], ["es", 67838], ["hr", 65110],
+  ["de", 64639], ["ms", 62642], ["ku", 56552], ["wa", 48502], ["pl", 47734], ["eo",
+  45607], ["br", 44649], ["eml", 42818], ["ca", 42509], ["ro", 39878], ["vi", 39717],
+  ["id", 37327], ["sr", 34309], ["nl", 34012], ["pt", 32800], ["tl", 31081], ["la",
   29679], ["hu", 28793], ["nb", 26189], ["diq", 20469], ["eu", 18170], ["su", 18033],
   ["sq", 17715], ["rm", 16354], ["sv", 14120], ["ceb", 13936], ["sl", 13541], ["lmo",
   12790], ["bcl", 12700], ["uz", 10494], ["sk", 10283], ["sw", 10111], ["fi", 9469],
@@ -181,6 +181,17 @@ src_langs: '[["ht", 1094266], ["fr", 625636], ["en", 547711], ["tl", 479162], ["
   ["pnb", 18], ["ckb", 17], ["mai", 12], ["as", 12], ["new", 10], ["bo", 9], ["tyv",
   6], ["bxr", 6], ["av", 6], ["sd", 4], ["bpy", 4], ["mzn", 3], ["sah", 2], ["myv",
   2], ["dty", 1]]'
+src_ngrams: '{"1": [[["moun"], 713554], [["jw\u00e8t"], 441962], [["ti"], 379440],
+  [["bon"], 314907], [["bay"], 253794]], "2": [[["sit ent\u00e8n\u00e8t"], 47513],
+  [["jwe jw\u00e8t"], 26454], [["ti fi"], 25170], [["mr speaker"], 22265], [["pitit
+  gason"], 22004]], "3": [[["bon jan kalite"], 27373], [["jw\u00e8t sou ent\u00e8n\u00e8t"],
+  12686], [["fin vye granmoun"], 10219], [["jwe sou ent\u00e8n\u00e8t"], 9819], [["lojisy\u00e8l
+  an p\u00e8m\u00e8t"], 9081]], "4": [[["pwop\u00f2syon ki pi wo"], 7456], [["popilasyon
+  an pi wo"], 7278], [["jwe sou ent\u00e8n\u00e8t flash"], 6184], [["jw\u00e8t la
+  te jwe"], 5652], [["moun ki nan jw\u00e8t"], 5599]], "5": [[["jwe sou ent\u00e8n\u00e8t
+  flash jw\u00e8t"], 6180], [["lyen ki nan yon zanmi"], 5585], [["pataje jw\u00e8t
+  la ak mond"], 5584], [["k\u00f2d la html nan sit"], 5584], [["kopi k\u00f2d la ak
+  keratin"], 5584]]}'
 src_sent_tokens: '[[0, 1523], [1, 231792], [2, 252466], [3, 254220], [4, 234750],
   [5, 207664], [6, 200217], [7, 190830], [8, 166474], [9, 150565], [10, 126970], [11,
   112163], [12, 104794], [13, 93778], [14, 78758], [15, 74117], [16, 67781], [17,
@@ -695,14 +706,3 @@ timestamp: 1727421937.0604055
 unique_sents: 2539373
 warnings:
 - src_warning_tok_nltk_wordpunct
-src_ngrams: '{"1": [[["moun"], 713554], [["jw\u00e8t"], 441962], [["ti"], 379440],
-  [["bon"], 314907], [["bay"], 253794]], "2": [[["sit ent\u00e8n\u00e8t"], 47513],
-  [["jwe jw\u00e8t"], 26454], [["ti fi"], 25170], [["mr speaker"], 22265], [["pitit
-  gason"], 22004]], "3": [[["bon jan kalite"], 27373], [["jw\u00e8t sou ent\u00e8n\u00e8t"],
-  12686], [["fin vye granmoun"], 10219], [["jwe sou ent\u00e8n\u00e8t"], 9819], [["lojisy\u00e8l
-  an p\u00e8m\u00e8t"], 9081]], "4": [[["pwop\u00f2syon ki pi wo"], 7456], [["popilasyon
-  an pi wo"], 7278], [["jwe sou ent\u00e8n\u00e8t flash"], 6184], [["jw\u00e8t la
-  te jwe"], 5652], [["moun ki nan jw\u00e8t"], 5599]], "5": [[["jwe sou ent\u00e8n\u00e8t
-  flash jw\u00e8t"], 6180], [["lyen ki nan yon zanmi"], 5585], [["pataje jw\u00e8t
-  la ak mond"], 5584], [["k\u00f2d la html nan sit"], 5584], [["kopi k\u00f2d la ak
-  keratin"], 5584]]}'
